# file-infection

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  NOTES.md  create_build.sh  replace.sh
cmake/: mingw_32bit_toolchain.cmake  win_toolchain.cmake
filegen/: CMakeLists.txt  generate_checksums.py  string_generator.py  util.py
resources/: strings.txt
scripts/: build.sh  build_copy.sh  build_copy_debug.sh  build_debug.sh  build_prepare.sh  debug_block_copy.sh  generate.sh  generate_checksums.py  generate_debug.sh  generate_tests.sh  mxe.sh  native.sh  prepare_shared.sh  qemu.sh  qemu_create_snapshot.sh  qemu_run.sh  qemu_run_base.sh  qemu_run_snapshot.sh  reformat.sh  run.sh  run_test.sh  run_tests.sh  setup_debug.sh  setup_mxe.sh  setup_release.sh  string_generator.py  util.py
scripts/file_generation/: string_generator.py
src/: CMakeLists.txt  ass.c  ass.h  ass.s  checksum.c  checksum.h  checksum_generator.c  checksum_generator.h  checksum_list.h  checksums.txt  code_begin.c  code_begin.h  code_end.c  code_end.h  code_size.h  copy.c  copy.h  data.c  data.h  delta.c  delta.h  disasm.c  disasm.h  function.c  function.h  function_kernel32.c  function_kernel32.h  function_list.c  function_list.h  functions.c  functions.h  generate_checksums.py  infect.c  infect.h  infection_thread.c  infection_thread.h  main.c  malloc.h  memory.c  memory.h  (+16 more)
src/block/: CMakeLists.txt  block.c  block.h  copy.c  copy.h  discovery.c  discovery.h  prepare.c  prepare.h  reference.c  reference.h
src/disasm/: CMakeLists.txt  disasm.c  disasm.h  disasm_utility.c  disasm_utility.h  instruction.c  instruction.h  instruction_op1.c  instruction_op1.h  instruction_op2.c  instruction_op2.h  instruction_op3.c  instruction_op3.h  operand_type.h  prefix.c  prefix.h  size.c  size.h
src/disasm/analysis/: CMakeLists.txt  analysis.c  analysis.h  block.c  block.h  call.c  call.h  function.c  function.h  reference.c  reference.h
tests/: CMakeLists.txt  check_instruction_length.c  check_instruction_size.py  compare_binary.py  copy_blocks.c  find_own_functions.c  generate_random_instructions.py  instruction_1byte.s  instruction_op1.s  instruction_op1_imm1.s  instruction_op1_imm2.s  instruction_op1_imm4.s  instruction_op1_modrm.s  instruction_test_driver.py  instructions_op1_basic.s  instructions_op1_immediate.s  instructions_op1_modrm_displacement.s  instructions_op1_prefix.s  instructions_op1_sib.s  instructions_op1_sib_displacement.s  instructions_op2_basic.s  instructions_op2_extensions.s  instructions_vex.s_NOT_USED  suspects.s  test_relocation.c  test_utility.c  test_utility.h  utility.py
tests/block_copy/: CMakeLists.txt  block_copy.c  call.py  compare_binary.py  disassembly.py  instruction.py  line.py  line_comparison.py  similarity.py
tests/copy_execution/: CMakeLists.txt  copy_execution.c  test_code.c  test_code.h
tests/function_discovery/: CMakeLists.txt  create_function_info.py  function_discovery.c
tests/instructions/: CMakeLists.txt  generate_random_instructions.py  instructions_op1_basic.s  instructions_op1_extensions.s  instructions_op2_basic.s  instructions_op3_basic.s  instructions_vex.s_NOT_USED  utility.py
